k8s/web/web.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
  namespace: kmotion
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
      name: web
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - image: ghcr.io/thomas-gleizes/kmotion-web:latest
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 80
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 3
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              memory: "128Mi"
      restartPolicy: Always
