k8s/web/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: kmotion
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
