k8s/web/web.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: kmotion
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kmotion.thomasgleizes.fr
      secretName: kmotion-tls
  rules:
    - host: kmotion.thomasgleizes.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
